--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -46,7 +46,7 @@
             </div>
             <div class="media-item">
                 <audio controls>
-                    <source src="audio/ds.wav" type="audio/wav">
+                    <source src="audio/ds.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
                 <p>downstream</p>
@@ -101,7 +101,7 @@
         <div class="media-container">
             <div class="media-item">
                 <video controls>
-                    <source src="video/Sekiro_Redesign.mp4" type="video/mp4">
+                    <source src="video/Sekiro_Redesign.webm" type="video/webm">
                     Your browser does not support the video element.
                 </video>
                 <p>Sekiro - Full Sound Redesign</p>
