Changed Tab Titles

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
             <ul>
                 <li><a href="#about" onclick="openTab(event, 'about')">About</a></li>
-                <li><a href="#audio" onclick="openTab(event, 'audio')">Audio</a></li>
-                <li><a href="#video" onclick="openTab(event, 'video')">Video</a></li>
+                <li><a href="#audio" onclick="openTab(event, 'audio')">Music</a></li>
+                <li><a href="#video" onclick="openTab(event, 'video')">Sound Design</a></li>
                 <li><a href="#photo" onclick="openTab(event, 'photo')">Photo</a></li>
             </ul>
         </nav>
