--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>I am a multimedia artist with a focus on music, sound design, and audio programming. Here you will find a selection of my work.</p>
                 <h3>Contact</h3>
                 <p><a href="mailto:your.email@example.com">jsneifer@outlook.com</a>.</p>
-                <p><a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/jsneifer" target="_blank">LinkedIn</a></p>
             </div>
         </div>
     </section>
