adjustments for mobile viewing and updated bio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="images/myphoto.jpg" alt="My Photo">
             </div>
             <div class="about-text">
-                <p>I am a multimedia artist with a focus on music, sound design, and audio programming. Here you will find a selection of my work.</p>
+                <p>I leverage my expertise in computer science and music technology to bring both technical precision and creative innovation to my work. With experience collaborating on cross-disciplinary teams of engineers and artists, I thrive at the intersection of technology and creativity. Here you will find a selection of my work including music, sound design, and my personal photography projects.</p>
                 <h3>Contact</h3>
                 <p><a href="mailto:your.email@example.com">jsneifer@outlook.com</a>.</p>
                 <p><a href="https://www.linkedin.com/in/jsneifer" target="_blank">LinkedIn</a></p>
@@ -100,11 +100,11 @@
         <h2>Sound Design</h2>
         <div class="media-container">
             <div class="media-item">
+                <p>Sekiro - Full Sound Redesign</p>
                 <video controls>
                     <source src="video/Sekiro_Redesign.webm" type="video/webm">
                     Your browser does not support the video element.
                 </video>
-                <p>Sekiro - Full Sound Redesign</p>
             </div>
         </div>
     </section>
